--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,14 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
+  
+  {
+    "name": "debugging sprint 8",
+    "request": "launch",
+    "type": "chrome",
+    "url": "http://localhost:51691",
+    "webRoot": "${workspaceFolder}"
+  },
     {
       "name": "ng serve",
       "type": "chrome",
